--- a/top101.html
+++ b/top101.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<link rel="stylesheet" type="text/css" href="CSS/top10style.css">
+	<link rel="stylesheet" type="text/css" href="CSS/top10style1.css">
 	<title>My 10 Favorite Bands</title>
 </head>
 <body>
+<div class="wrapper">
 	<h1 class="opening"> My 10 Favorite Bands</h1>
 <ol>
 	<li><h1>The Rolling Stones</h1></li>
@@ -18,7 +19,7 @@
 	<li><h1>Iron Maiden</h1></li>
 	<img src="Images/Iron Maiden.jpg">
 	<p>Iron Maiden, a British Metal group is one of my favorite bands to listen to. From great guitar solos and vocals, it is great to jam out to. The band also has a cool mascot named Eddie.</p>
-	<p>Visit <a href="https://en.wikipedia.org/wiki/Iron_Maiden"> for more information </a> </p>
+	<p> Visit <a href="https://en.wikipedia.org/wiki/Iron_Maiden"></a>for more information</p>
 	<li><h1>Kiss</h1></li>
 	<img src="Images/Kiss.jpg">
 	<p>Kiss, the band widely known for the makeup and crazy outifts are really great to listen to. From songs like Lovegun to Detroit Rock City, the band is really great to listen and jam out to.</p>
@@ -48,5 +49,10 @@
 	<p>Bob Seger is another great band to listen to rock out. Their song Old Time Rock 'N' Roll is a great dancing and lip sync song like Tom Cruise did in Risky Business.</p>
 	<p>Visit <a href="https://en.wikipedia.org/wiki/Bob_Seger"> for more information</a></p>
 </ol>
+</div>
+<footer>
+	<p>Copryright: Cole Martin</p>
+	<p>Last updated: January 28, 2019</p>
+</footer>
 </body>
 </html>
