--- a/top10.html
+++ b/top10.html
@@ -5,6 +5,12 @@
 	<title>My 10 Favorite Bands</title>
 </head>
 <body>
+	<div class="wrapper2">
+			<nav>
+				<a href="bio.html" target="_blank"> BIO </a>
+				<a href="quiz1.html"target="_blank"> QUIZ1 </a>
+				<a href="index.html" target="_blank"> HOME PAGE</a>
+		</nav>
 	<h1 class="opening"> My 10 Favorite Bands</h1>
 <ol>
 	<li><h1>The Rolling Stones</h1></li>
