--- a/quiz1.html
+++ b/quiz1.html
@@ -5,6 +5,13 @@
 <title>Your First Quiz </title>
 </head>
 <body>
+<div class="wrapper2">
+			<nav>
+				<a href="top10.html" target="_blank"> TOP10 </a>
+				<a href="bio.html"target="_blank"> BIO </a>
+				<a href="index.html" target="_blank"> HOME PAGE</a>
+		</nav>
+	</div>
 <h1> Your First Quiz </h1>
 <h2>HTML & CSS FUN</h2>
 <h3>HTML</h3>
