--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 				<a href="top10.html" target="_blank"> TOP10 </a>
 				<a href="quiz1.html"target="_blank"> QUIZ1 </a>
 				<a href="bio.html" target="_blank"> BIO </a>
+				<a href="stevieray.html" target="_blank"> STEVIE RAY VAUGHN</a>
 			
 		</nav>
 	</div>
