--- a/top10.html
+++ b/top10.html
@@ -9,6 +9,7 @@
 			<nav>
 				<a href="bio.html" target="_blank"> BIO </a>
 				<a href="quiz1.html"target="_blank"> QUIZ1 </a>
+				<a href="stevieray.html" target="_blank"> STEVIE RAY VAUGHN</a>
 				<a href="index.html" target="_blank"> HOME PAGE</a>
 		</nav>
 	<h1 class="opening"> My 10 Favorite Bands</h1>
