--- a/index.html
+++ b/index.html
@@ -8,10 +8,12 @@
 	<div class="wrapper">
 		<nav>
 			<h1>THE COLE MARTIN HOME PAGE</h1>
-				<a href="bio.html" target="_blank"> BIO </a>
 				<a href="top10.html" target="_blank"> TOP10 </a>
 				<a href="quiz1.html"target="_blank"> QUIZ1 </a>
+				<a href="bio.html" target="_blank"> BIO </a>
 				<a href="stevieray.html" target="_blank"> STEVIE RAY VAUGHN</a>
+				<a href="recipe.html" target="_blank"> RECIPE</a>
+		</nav>
 			
 		</nav>
 	</div>
