--- a/quiz1.html
+++ b/quiz1.html
@@ -9,9 +9,10 @@
 			<nav>
 				<a href="index.html" target="_blank"> HOME PAGE</a>
 				<a href="top10.html" target="_blank"> TOP10 </a>
-				<a href="bio.html"target="_blank"> BIO </a>
+				<a href="quiz1.html"target="_blank"> QUIZ1 </a>
+				<a href="bio.html" target="_blank"> BIO </a>
 				<a href="stevieray.html" target="_blank"> STEVIE RAY VAUGHN</a>
-			
+				<a href="recipe.html" target="_blank"> RECIPE</a>
 
 		</nav>
 	</div>
