--- a/top10.html
+++ b/top10.html
@@ -7,10 +7,12 @@
 <body>
 	<div class="wrapper2">
 			<nav>
-				<a href="index.html" target="_blank"> HOME PAGE</a>
-				<a href="bio.html" target="_blank"> BIO </a>
-				<a href="quiz1.html"target="_blank"> QUIZ1 </a>
-				<a href="stevieray.html" target="_blank"> STEVIE RAY VAUGHN</a>
+			<a href="index.html" target="_blank" class="a1" > HOME PAGE</a>
+				<a href="top10.html" target="_blank" class="a1"> TOP10 </a>
+				<a href="quiz1.html"target="_blank" class="a1"> QUIZ1 </a>
+				<a href="bio.html" target="_blank" class="a1"> BIO </a>
+				<a href="stevieray.html" target="_blank" class="a1"> STEVIE RAY VAUGHN</a>
+				<a href="recipe.html" target="_blank" class="a1"> RECIPE</a>
 				
 		</nav>
 	<h1 class="opening"> My 10 Favorite Bands</h1>
@@ -18,7 +20,7 @@
 	<li><h1>The Rolling Stones</h1></li>
 	<img src="Images/The Rolling Stones.jpg">
 	<p>The Rolling Stones is a great band with many popular hits. The band has released many great albums. These albums include Sticky Fingers, Let it Bleed, Beggar's Banquet and more. </p>
-	<p> Visit <a href=https://en.wikipedia.org/wiki/The_Rolling_Stones> for more information </a></p>
+	<p> Visit <a href=https://en.wikipedia.org/wiki/The_Rolling_Stones > for more information </a></p>
 	<li><h1>Guns'N Roses</h1></li>
 	<img src="Images/Guns N Roses.jpg">
 	<p>Guns 'N Roses, one of the most popular rock bands of all time have many great songs. Songs that were big hits include Sweet Child 'O' Mine, November Rain, Patience and many more. The bands debut album, Appetite for Destruction is sometimes regarded as the greatest debut album from any band.</p>
