--- a/joe.html
+++ b/joe.html
@@ -5,12 +5,12 @@
 	<title>Joe</title>
 </head>
 <body>
-	<div class="wrapper">
+	<div class="wrapper cleared">
 		<h1> Joe Montana </h1>
 		<h2> 49ers Greatest QB </h2>
-		<section class="cleared">
+		<section class="cleared coll">
 		<h3>4 Time Super Bowl Champion </h3>
-		<img src="Images/joerings.jpg" class="floatl">
+		<img src="Images/joerings.jpg" class="float1">
 		<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 		tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
 		quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
@@ -23,7 +23,7 @@
 		cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
 		proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
 </section>
-<section class="cleared2">
+<section class="cleared2 colr">
 	<h3>3 Time Super Bowl MVP </h3>
 	<img src="Images/joemvp.jpg" class="MVP">
 	<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
@@ -33,7 +33,7 @@
 	cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
 	proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
 </section>
-	<footer> last updated February 11th, 2019</footer>
 	</div>
+	<footer> last updated February 11th, 2019</footer>
 </body>
 </html>
