--- a/index.html
+++ b/index.html
@@ -13,9 +13,10 @@
 				<a href="bio.html" target="_blank"> BIO </a>
 				<a href="stevieray.html" target="_blank"> STEVIE RAY VAUGHN</a>
 				<a href="recipe.html" target="_blank"> RECIPE</a>
+				<a href="gallery.html" target="_blank"> POLAROID GALLLERY</a>
 		</nav>
 			
-		</nav>
+		
 	</div>
 		<footer>
 		<p>Copyright: Cole Martin</p>
