--- a/quiz1.html
+++ b/quiz1.html
@@ -13,6 +13,8 @@
 				<a href="bio.html" target="_blank"> BIO </a>
 				<a href="stevieray.html" target="_blank"> STEVIE RAY VAUGHN</a>
 				<a href="recipe.html" target="_blank"> RECIPE</a>
+				<a href="gallery.html" target="_blank"> POLAROID GALLLERY</a>
+		</nav>
 
 		</nav>
 	</div>
