--- a/recipe.html
+++ b/recipe.html
@@ -14,7 +14,8 @@
 				<a href="bio.html" target="_blank"> BIO </a>
 				<a href="stevieray.html" target="_blank"> STEVIE RAY VAUGHN</a>
 				<a href="recipe.html" target="_blank"> RECIPE</a>
-				
+				<a href="gallery.html" target="_blank"> POLAROID GALLLERY</a>
+		</nav>
 			
 			</nav>
 	<h1 class="ingredients">Avocado Veggie Rainbow Rolls & Tangy Tahini Dipping Sauce</h1>
