--- a/top10.html
+++ b/top10.html
@@ -13,6 +13,7 @@
 				<a href="bio.html" target="_blank" class="a1"> BIO </a>
 				<a href="stevieray.html" target="_blank" class="a1"> STEVIE RAY VAUGHN</a>
 				<a href="recipe.html" target="_blank" class="a1"> RECIPE</a>
+				<a href="gallery.html" target="_blank" class="a1"> POLAROID GALLERY</a>
 				
 		</nav>
 	<h1 class="opening"> My 10 Favorite Bands</h1>
