--- a/stevieray.html
+++ b/stevieray.html
@@ -14,7 +14,7 @@
 				<a href="bio.html" target="_blank"> BIO </a>
 				<a href="stevieray.html" target="_blank"> STEVIE RAY VAUGHN</a>
 				<a href="recipe.html" target="_blank"> RECIPE</a>
-				<a href="gallery.html" target="_blank"> POLAROID GALLLERY</a>
+				<a href="gallery.html" target="_blank"> POLAROID GALLERY</a>
 		</nav>
 			
 		</nav>
