--- a/gallery.html
+++ b/gallery.html
@@ -7,14 +7,17 @@
 <body>
 	<div class="wrapper">
 	<nav>
-				<a href="index.html" target="_blank">HOMEPAGE</a>
+
+				<a href="index.html" target="_blank"> HOMEPAGE</a>
 				<a href="top10.html" target="_blank"> TOP10 </a>
 				<a href="quiz1.html"target="_blank"> QUIZ1 </a>
 				<a href="bio.html" target="_blank"> BIO </a>
-				<a href="stevieray.html" target="_blank"> STEVIE RAY VAUGHN</a>
+				<a href="stevieray.html" target="_blank"> STEVIE RAY VAUGHAN</a>
 				<a href="recipe.html" target="_blank"> RECIPE</a>
 				<a href="gallery.html" target="_blank"> POLAROID GALLERY</a>
-		</nav>
+				<a href="mondrian.html" target="_blank"> MONDRIAN </a>
+		</nav>	
+	
 	</div>
 
 	<div class="gallery">
