--- a/quiz1.html
+++ b/quiz1.html
@@ -7,16 +7,15 @@
 <body>
 <div class="wrapper2">
 			<nav>
-				<a href="index.html" target="_blank"> HOME PAGE</a>
+				<a href="index.html" target="_blank"> HOMEPAGE</a>
 				<a href="top10.html" target="_blank"> TOP10 </a>
 				<a href="quiz1.html"target="_blank"> QUIZ1 </a>
 				<a href="bio.html" target="_blank"> BIO </a>
-				<a href="stevieray.html" target="_blank"> STEVIE RAY VAUGHN</a>
+				<a href="stevieray.html" target="_blank"> STEVIE RAY VAUGHAN</a>
 				<a href="recipe.html" target="_blank"> RECIPE</a>
-				<a href="gallery.html" target="_blank"> POLAROID GALLLERY</a>
-		</nav>
-
-		</nav>
+				<a href="gallery.html" target="_blank"> POLAROID GALLERY</a>
+				<a href="mondrian.html" target="_blank"> MONDRIAN </a>
+		</nav>	
 	</div>
 <h1> Your First Quiz </h1>
 <h2>HTML & CSS FUN</h2>
