--- a/recipe.html
+++ b/recipe.html
@@ -8,16 +8,17 @@
 	<div class="wrapper cleared">
 
 			<nav>
-				<a href="index.html" target="_blank"> HOME PAGE</a>
+				<a href="index.html" target="_blank"> HOMEPAGE</a>
 				<a href="top10.html" target="_blank"> TOP10 </a>
 				<a href="quiz1.html"target="_blank"> QUIZ1 </a>
 				<a href="bio.html" target="_blank"> BIO </a>
-				<a href="stevieray.html" target="_blank"> STEVIE RAY VAUGHN</a>
+				<a href="stevieray.html" target="_blank"> STEVIE RAY VAUGHAN</a>
 				<a href="recipe.html" target="_blank"> RECIPE</a>
 				<a href="gallery.html" target="_blank"> POLAROID GALLERY</a>
-		</nav>
+				<a href="mondrian.html" target="_blank"> MONDRIAN </a>
+		</nav>	
 			
-			</nav>
+			
 	<h1 class="ingredients">Avocado Veggie Rainbow Rolls & Tangy Tahini Dipping Sauce</h1>
 	<h2 class="ingredients"> This is a crunchy, refreshing & surprisingly satisfying meal. It is gluten-free, dairy-free, nut-free & vegan too! Oh and super delicious 😋</h2>
 	<h3 class="ingredients">Prep Time: 30 min</h3>
