--- a/stevieray.html
+++ b/stevieray.html
@@ -8,18 +8,18 @@
 	<div class="wrapper">
 
 			<nav>
-				<a href="index.html" target="_blank"> HOME PAGE</a>
+
+				<a href="index.html" target="_blank"> HOMEPAGE</a>
 				<a href="top10.html" target="_blank"> TOP10 </a>
 				<a href="quiz1.html"target="_blank"> QUIZ1 </a>
 				<a href="bio.html" target="_blank"> BIO </a>
-				<a href="stevieray.html" target="_blank"> STEVIE RAY VAUGHN</a>
+				<a href="stevieray.html" target="_blank"> STEVIE RAY VAUGHAN</a>
 				<a href="recipe.html" target="_blank"> RECIPE</a>
 				<a href="gallery.html" target="_blank"> POLAROID GALLERY</a>
-		</nav>
-			
-		</nav>
+				<a href="mondrian.html" target="_blank"> MONDRIAN </a>
+		</nav>	
 		
-		<h1> Stevie Ray Vaughn </h1>
+		<h1> Stevie Ray Vaughan </h1>
 		<h2> American Blues Artist </h2>
 		<section class="cleared">
 		<h2 class="musiccareer"> Stevie Ray Vaughn</h2>
