--- a/top10.html
+++ b/top10.html
@@ -7,15 +7,17 @@
 <body>
 	<div class="wrapper2">
 			<nav>
-			<a href="index.html" target="_blank" class="a1" > HOME PAGE</a>
+				<a href="index.html" target="_blank" class="a1"> HOMEPAGE</a>
 				<a href="top10.html" target="_blank" class="a1"> TOP10 </a>
 				<a href="quiz1.html"target="_blank" class="a1"> QUIZ1 </a>
 				<a href="bio.html" target="_blank" class="a1"> BIO </a>
-				<a href="stevieray.html" target="_blank" class="a1"> STEVIE RAY VAUGHN</a>
+				<a href="stevieray.html" target="_blank" class="a1"> STEVIE RAY VAUGHAN</a>
 				<a href="recipe.html" target="_blank" class="a1"> RECIPE</a>
 				<a href="gallery.html" target="_blank" class="a1"> POLAROID GALLERY</a>
+				<a href="mondrian.html" target="_blank" class="a1"> MONDRIAN </a>
+		</nav>	
 				
-		</nav>
+	
 	<h1 class="opening"> My 10 Favorite Bands</h1>
 <ol>
 	<li><h1>The Rolling Stones</h1></li>
